Revision history for Perl extension Coro.

	- included libcoro.c earlier in State.xs, might improve portability.
        - use a faster and possibly more stable Coro::Cont implementation.
        - accept x86_64 in addition to amd64 for optimized linux-amd64 support.

1.11 Thu Mar  3 18:00:52 CET 2005
	- change of contact address.

1.1 Tue Feb 22 20:51:16 CET 2005
	- support [l]inux method on amd64.
        - make some context switches while compiling/eval'ing work.

1.0  Tue Aug 10 03:47:27 CEST 2004
	- Event 0.89 fixes the bug again.
        - fix the remaining(??) memleak. I didn't free the cache-AV for
          padlists, so one AV per created anon-sub leaked.

0.97 Fri May 14 15:23:32 CEST 2004
	- remove stupid gcc extension that was an experiment only anyway.

0.96 Thu May 13 18:09:29 CEST 2004
	- tell people if they have yet another broken Event variant.
	- made Coro to work _better_ with threads (it seems that, as long
          as you use Coros in one thread only everything will work fine.
          Looking at the perl source the problem might be missing locking
          between Coro and some perl internal routines. That's not easily
          fixable).
        - (hopefully) got rid of the static xnext inside transfer.

0.95 Sun Feb 15 03:20:28 CET 2004
	- removed Coro::State::flush, implemented a new and much
          faster caching mechanism by attaching magic to the CV.
        - a memleak with (real) closures remains.
        - dramatically reduced size of stacks to 65536 (linux/x86), after
          observing that even myhttpd never had more than a kilobyte
          of stack in use (stack is still only physically allocated in
          pagesize increments for systems suporting mmap).
        - fix for a "cygwin-64" architecture added, proposed by Stefan Traby.
        - fix for threaded perl.

0.9  Sun Nov 23 04:32:39 CET 2003
	- fix a few very hard to track down but (of course) stupid
          memory leaks.